tests/snapshots/snapshot_tests__array_init_increm_two_arrs.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_increm_two_arrs.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!15 Z 450) Z) 450)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!15 Z 450) Z) (Read-Int-Int Array-Int-Int!val!15 Z))",
    ],
}
