tests/snapshots/snapshot_tests__array_init_increm_two_arrs_antisym.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_increm_two_arrs_antisym.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z 8856) Z) 8856)",
        "(= (Read-Int-Int (Write-Int-Int b_next Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int a Z 1797) Z) 1797)",
        "(= (Read-Int-Int (Write-Int-Int a Z 8856) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a_next Z x) Z) x)",
        "(= (Read-Int-Int (Write-Int-Int a Z 8857) Z) 8857)",
    ],
}
