tests/snapshots/snapshot_tests__array_init_increm_two_arrs_antisym.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_increm_two_arrs_antisym.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!11 Z 8856) Z) 8856)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!11 Z 8856) Z) (Read-Int-Int Array-Int-Int!val!11 Z))",
    ],
}
