tests/snapshots/snapshot_tests__array_init_increm_two_arrs_antisym_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_increm_two_arrs_antisym_const.vmt",
    status: Timeout,
    used_instantiations: [],
}
